fix supervisor config

--- a/extra/etc/supervisor/conf.d/tickers.conf
+++ b/extra/etc/supervisor/conf.d/tickers.conf
@@ -1,5 +1,5 @@
 [program:tickers]
-command=/home/bc/tickers/venv/bin/gunicorn wsgi:app -c /home/bc/tickers/gunicorn.conf.py
+command=/home/bc/tickers/venv/bin/gunicorn wsgi:app -c /home/bc/tickers/gunicorn_config.py
 directory=/home/bc/tickers
 user=bc
 autorestart=true
