--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ amqp==2.2.2
 aniso8601==1.3.0
 APScheduler==3.4.0
 billiard==3.5.0.3
+blinker==1.4
 celery==4.1.0
 certifi==2017.11.5
 chardet==3.0.4
@@ -26,6 +27,7 @@ PyMySQL==0.7.11
 python-dateutil==2.6.1
 python-editor==1.0.3
 pytz==2017.3
+raven==6.4.0
 requests==2.18.4
 requests-mock==1.4.0
 six==1.11.0
