fixed config files

--- a/extra/etc/supervisor/conf.d/tickers.conf
+++ b/extra/etc/supervisor/conf.d/tickers.conf
@@ -1,6 +1,6 @@
 [program:tickers]
-command=/home/bc/tickers/venv/bin/gunicorn wsgi:app -c /home/bc/tickers/gunicorn_config.py
-directory=/home/bc/tickers
-user=bc
+command=/home/deployer/tickers/venv/bin/gunicorn wsgi:app -c /home/deployer/tickers/gunicorn_config.py
+directory=/home/deployer/tickers
+user=deployer
 autorestart=true
 redirect_stderr=true
