--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.9.6
 amqp==2.2.2
 aniso8601==1.3.0
 APScheduler==3.4.0
+Babel==2.5.3
 billiard==3.5.0.3
 blinker==1.4
 celery==4.1.0
@@ -16,6 +17,7 @@ Flask-RESTful==0.3.6
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.6.2
+flower==0.9.2
 gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
@@ -28,10 +30,12 @@ python-dateutil==2.6.1
 python-editor==1.0.3
 pytz==2017.3
 raven==6.4.0
+redis==2.10.6
 requests==2.18.4
 requests-mock==1.4.0
 six==1.11.0
 SQLAlchemy==1.1.15
+tornado==5.0.1
 tzlocal==1.5.1
 urllib3==1.22
 vine==1.1.4
