--- a/extra/systemd/celery.service
+++ b/extra/systemd/celery.service
@@ -6,7 +6,7 @@ After=network.target
 Type=forking
 User=deployer
 Group=deployer
-EnvironmentFile=-/etc/default/celery.conf
+EnvironmentFile=-/etc/default/celeryd
 WorkingDirectory=/home/deployer/tickers
 PrivateTmp=true
 Restart=on-failure
