--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ requests==2.18.4
 requests-mock==1.4.0
 six==1.11.0
 SQLAlchemy==1.1.15
+tenacity==4.12.0
 tornado==5.0.1
 tzlocal==1.5.1
 urllib3==1.22
