--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ chardet==3.0.4
 click==6.7
 Flask==0.12.2
 Flask-APScheduler==1.7.1
+Flask-Caching==1.7.2
 Flask-Celery-Helper==1.1.0
 Flask-Migrate==2.1.1
 Flask-RESTful==0.3.6
