--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 alembic==0.9.6
-amqp==2.2.2
+amqp==5.0.2
 aniso8601==1.3.0
 APScheduler==3.4.0
 Babel==2.5.3
-billiard==3.5.0.3
+billiard==3.6.3.0
 blinker==1.4
 celery==5.0.2
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
+click-didyoumean==0.0.3
+click-repl==0.1.6
 Flask==1.1.1
 Flask-APScheduler==1.7.1
 Flask-Caching==1.7.2
@@ -26,6 +28,8 @@ Jinja2==2.11.1
 kombu==5.0.2
 Mako==1.0.7
 MarkupSafe==1.1.1
+pkg-resources==0.0.0
+prompt-toolkit==3.0.8
 PyMySQL==0.7.11
 python-dateutil==2.6.1
 python-editor==1.0.3
@@ -40,5 +44,6 @@ tenacity==4.12.0
 tornado==5.0.1
 tzlocal==1.5.1
 urllib3==1.25.8
-vine==1.1.4
+vine==5.0.0
+wcwidth==0.2.5
 Werkzeug==1.0.0
