Fix limit host test
Ensure proper host name for ansible limit on CI deploy part.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
         python manage.py test
     - stage: deploy
       name: "Deploy code to target servers"
-      env: LIMIT=tickers
+      env: LIMIT=cryptoprocessing_ticker
       before_script: |
         echo "Checkout ansible controller repository"
         eval "$(ssh-agent -s)"
