--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ click-didyoumean==0.0.3
 click-repl==0.1.6
 Flask==1.1.2
 Flask-APScheduler==1.7.1
-Flask-Caching==1.7.2
+flask-caching==1.10.1
 Flask-Celery-Helper==1.1.0
 Flask-Migrate==2.1.1
 Flask-RESTful==0.3.8
@@ -21,7 +21,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 Flask-Testing==0.8.0
 flower==0.9.2
-gunicorn==19.7.1
+gunicorn==19.10.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -42,7 +42,7 @@ SQLAlchemy==1.4.4
 tenacity==4.12.0
 tornado==5.0.1
 tzlocal==1.5.1
-urllib3==1.25.8
+urllib3==1.26.6
 vine==5.0.0
 wcwidth==0.2.5
 Werkzeug==1.0.0
